rust/windows_module/errors_4.txt
    Checking windows_module v0.1.0 (/root/aios/rust/windows_module)
error[E0432]: unresolved import `dynasmrt`
 --> windows_module/src/main/windows_local_failover.rs:5:5
  |
5 | use dynasmrt::{dynasm...
  |     ^^^^^^^^ use of unresolved module or unlinked crate `dynasmrt`
  |
help: there is a crate or module with a similar name
  |
5 - use dynasmrt::{dynasm, DynasmApi, DynasmLabelApi};
5 + use dynasm::{dynasm, DynasmApi, DynasmLabelApi};
  |

error[E0432]: unresolved import `dynasmrt`
  --> windows_module/src/jit/windows_compiler.rs:11:5
   |
11 | use dynasmrt::{dynas...
   |     ^^^^^^^^ use of unresolved module or unlinked crate `dynasmrt`
   |
help: there is a crate or module with a similar name
   |
11 - use dynasmrt::{dynasm, DynasmApi, DynasmLabelApi};
11 + use dynasm::{dynasm, DynasmApi, DynasmLabelApi};
   |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `dynasmrt`
   --> windows_module/src/jit/windows_compiler.rs:134:23
    |
134 | ... = dynasmrt::x64...
    |       ^^^^^^^^ use of unresolved module or unlinked crate `dynasmrt`
    |
help: there is a crate or module with a similar name
    |
134 -         let mut ops = dynasmrt::x64::Assembler::new().map_err(|e| JitError::CompilationError(e.to_string()))?;
134 +         let mut ops = dynasm::x64::Assembler::new().map_err(|e| JitError::CompilationError(e.to_string()))?;
    |

warning: found module declaration for main.rs
 --> windows_module/src/lib.rs:3:1
  |
3 | pub mod main;
  | ^^^^^^^^^^^^^
  |
  = note: a binary crate cannot be used as library
  = note: `#[warn(special_module_name)]` on by default

warning: unused import: `warn`
 --> windows_module/src/main/windows_local_failover.rs:4:21
  |
4 | ...{info, warn};
  |           ^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `info`
  --> windows_module/src/main/windows_main.rs:11:15
   |
11 | ...ing::{info, error};
   |          ^^^^

warning: unused import: `warn`
 --> windows_module/src/executor/windows_gpu_context.rs:6:21
  |
6 | ...{info, warn};
  |           ^^^^

error[E0282]: type annotations needed
   --> windows_module/src/jit/windows_compiler.rs:134:64
    |
134 | ...r(|e| JitError::CompilationError(e.to...
    |       ^                             - type must be known at this point
    |
help: consider giving this closure parameter an explicit type
    |
134 |         let mut ops = dynasmrt::x64::Assembler::new().map_err(|e: /* Type */| JitError::CompilationError(e.to_string()))?;
    |                                                                 ++++++++++++

Some errors have detailed explanations: E0282, E0432, E0433.
For more information about an error, try `rustc --explain E0282`.
warning: `windows_module` (lib) generated 4 warnings
error: could not compile `windows_module` (lib) due to 4 previous errors; 4 warnings emitted
